# FORGE

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
src/fused_grad_optimizer/: __init__.py  autograd.py  cutlass2x_evt_h200.py  cutlass_evt_b200.py  cutlass_evt_b200_exp.py  cutlass_evt_b200_fp8.py  cutlass_kernel.py  cutlass_kernel_b200.py  cutlass_kernel_h200.py  fused_linear_cpp_bridge.py  fused_rmsnorm_linear.py  hopper_evt_adamw_h200.py  hopper_kernel_h200.py  hopper_streamk_h200.py  kernel.py  kernel_b200_ws.py  kernel_fp8_state.py  kernel_fp8_v7.py  kernel_h200_tune.py  kernel_ws_v2.py  kernel_ws_v3.py  l2_cache.py  module.py  state.py
src/fused_grad_optimizer/csrc/: l2_cache.cu
src/fused_grad_optimizer/csrc/cutlass2x_gemm/: fused_adamw_cutlass3x.cu
src/fused_grad_optimizer/csrc/cutlass_b200_evt/: fused_adamw_evt_sm100.cu  fused_adamw_evt_sm100_exp.cu  fused_adamw_evt_sm100_fp8.cu
src/fused_grad_optimizer/csrc/cutlass_b200_gemm/: fused_adamw_cutlass_b200.cu
src/fused_grad_optimizer/csrc/evt_fused/: epilogue_visitor_adamw.h  fused_adamw_evt.cu
src/fused_grad_optimizer/csrc/fused_linear_cpp/: fused_linear.cpp
src/fused_grad_optimizer/csrc/hopper_evt/: fused_adamw_hopper.cu
src/fused_grad_optimizer/csrc/hopper_evt_adamw/: fused_adamw_evt_sm90.cu
src/fused_grad_optimizer/csrc/hopper_streamk/: fused_adamw_hopper_streamk.cu
src/fused_grad_optimizer/csrc/legacy/: fused_adamw_cutlass.cu  fused_adamw_cutlass_v2.cu  fused_adamw_v3_wmma.cu
src/fused_grad_optimizer/csrc/opt_only/: optimizer_only_adamw.cu
src/fused_grad_optimizer/csrc/v3_wmma/: fused_adamw_v3.cu
tests/: test_correctness.py
